yew-functional-macro/tests/functional_macro/multiple-param-fail.stderr
error: functional components must take only parameter of props
  --> $DIR/multiple-param-fail.rs:10:24
   |
10 | fn comp(props: &Props, invalid: String) -> Html {
   |                        ^^^^^^^^^^^^^^^
